--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - run: docker build -t fredericora/react-test -f ./client/Dockerfile.dev ./client
-      #- run: docker run -e CI=true fredericora/react-test npm test
+      - run: docker run -e CI=true fredericora/react-test npm test
  
       - run: docker build -t fredericora/multi-client ./client
       - run: docker build -t fredericora/multi-nginx ./nginx
