--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -8,4 +8,5 @@ COPY --chown=node:node ./package.json ./
 RUN npm install
 COPY --chown=node:node ./ ./
 #COPY . .
-CMD ["npm","run", "start"]
+CMD ["npm","start"]
+#CMD ["npm","run", "start"]
