--- a/worker/Dockerfile
+++ b/worker/Dockerfile
@@ -1,4 +1,5 @@
-FROM node:14.14.0-alpine
+#FROM node:14.14.0-alpine
+FROM node:16-alpine
 USER node
 RUN mkdir -p /home/node/app
 WORKDIR /home/node/app
