--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -11,4 +11,5 @@ RUN npm run build
 FROM nginx
 EXPOSE 3000
 COPY ./nginx/default.conf /etc/nginx/default.conf
-COPY --from=builder /home/node/app/build /user/share/html
+#COPY --from=builder /home/node/app/build /user/share/html
+COPY --from=builder /app/build /usr/share/nginx/html
