--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,9 @@
 FROM node:16-alpine as builder
 USER node
-RUN mkdir -p /home/node/app
-WORKDIR /home/node/app
+RUN mkdir -p /app
+ WORKDIR /app
+# RUN mkdir -p /home/node/app
+# WORKDIR /home/node/app
 COPY --chown=node:node ./package.json ./
 RUN npm install
 COPY --chown=node:node ./ ./
