--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,17 @@
 FROM node:16-alpine as builder
-USER node
+#USER node
 #RUN mkdir -p /app
 WORKDIR /app
+COPY ./package.json ./
+RUN npm install
+COPY ./ ./
+RUN npm run build
 # RUN mkdir -p /home/node/app
 # WORKDIR /home/node/app
-COPY --chown=node:node ./package.json ./
-RUN npm install
-COPY --chown=node:node ./ ./
-RUN npm run build
+# COPY --chown=node:node ./package.json ./
+# RUN npm install
+# COPY --chown=node:node ./ ./
+# RUN npm run build
 #CMD ["npm","run", "start"]
 
 FROM nginx
