--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,11 +1,11 @@
 #FROM node:14.14.0-alpine
 FROM node:16-alpine
-USER node
+#USER node
 #RUN mkdir -p /app
 WORKDIR /app
 # RUN mkdir -p /home/node/app
 # WORKDIR /home/node/app
-COPY --chown=node:node ./package.json ./
+COPY ./package.json ./
 RUN npm install
-COPY --chown=node:node ./ ./
+COPY ./ ./
 CMD ["npm","run","start"]
