--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -47,13 +47,13 @@ services:
       - REDIS_PORT=6379
   
   nginx:
-    depends_on:
-      - api
-      - client
+    # depends_on:
+    #   - api
+    #   - client
     restart: always
     build:
       dockerfile: Dockerfile.dev
       context: ./nginx
     ports:
-    - '3050:80'
+      - '3050:80'
 
