--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -14,8 +14,8 @@ services:
       # Context refer location of Dockerfile.dev file.
       context: ./server
     volumes:
-      - /home/node/app/node_modules
-      - ./server:/home/node/app
+      - /app/node_modules
+      - ./server:/app
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -30,8 +30,8 @@ services:
       dockerfile: Dockerfile
       context: ./client
     volumes:
-      - /home/node/app/node_modules
-      - ./client:/home/node/app
+      - /app/node_modules
+      - ./client:/app
     environment:
       - WDS_SOCKET_PORT=0
     
@@ -40,8 +40,8 @@ services:
       dockerfile: Dockerfile
       context: ./worker
     volumes:
-      - /home/node/app/node_modules
-      - ./worker:/home/node/app
+      - /app/node_modules
+      - ./worker:/app
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
